@@ -1,3 +1,9 @@
+2006-03-09  Roger Sayle  <roger@eyesopen.com>
+
+	PR tree-optimization/26524
+	* tree-scalar-evolution.c (interpret_rhs_modify_expr): Use
+	fold_convert to create a constant of the appropriate type.
+
 2006-03-07  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/26587
